[package]
name = "meter"
version = "0.1.0"
edition = "2018"
authors = ["Chris Burgess"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cgburgess/meter"
homepage = "https://github.com/cgburgess/meter"
description = """
CLI level meter for adjusting microphone gain/levels.
"""
categories = ["command-line-utilities", "multimedia", "visualization"]
keywords = ["level", "meter", "gain-stage", "dB", "decibel-meter"]
exclude = ["/media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
console = "0.14.1"
keyed_priority_queue = "0.3.2"
lazy_static = "1.4.0"
terminal_size = "0.1.17"